--- a/.gitignore
+++ b/.gitignore
@@ -19,3 +19,4 @@ notes/samples notes.md
 sample-viewer-api/src/static/data/2018-04-12_systemsSerology.xlsx
 sample-viewer-api/src/static/data/2018-06_samplelist.xlsx
 sample-viewer-api/src/static/data/2018-12-18- master sample list Jun-Jul-18.xlsx
+sample-viewer/package-lock.json
