Add in HLA data with hashed IDs

--- a/.gitignore
+++ b/.gitignore
@@ -20,3 +20,4 @@ sample-viewer-api/src/static/data/*.xlsx
 sample-viewer-api/src/static/data/*.xls
 sample-viewer-api/src/static/data/*.csv
 sample-viewer-api/src/static/data/*.json
+notes/*.md
