--- a/sample-viewer/package.json
+++ b/sample-viewer/package.json
@@ -11,7 +11,7 @@
     "build:dev": "npm run build:dev-bundles && npm run webpack:server",
     "build:ssr": "npm run build:client-and-server-bundles && npm run webpack:server",
     "serve:ssr": "node dist/server",
-    "build:dev-bundles": "ng build && ng run sample-viewer:server",
+    "build:dev-bundles": "ng build --preserve-symlinks && ng run sample-viewer:server",
     "build:client-and-server-bundles": "ng build --prod && ng run sample-viewer:server",
     "webpack:server": "webpack --config webpack.server.config.js --progress --colors"
   },
