--- a/sample-viewer/package.json
+++ b/sample-viewer/package.json
@@ -35,6 +35,7 @@
     "@nguniversal/express-engine": "^7.1.0",
     "@nguniversal/module-map-ngfactory-loader": "^7.1.0",
     "@ngx-lite/json-ld": "^0.5.2",
+    "autotrack": "^2.4.1",
     "cookie-parser": "^1.4.3",
     "core-js": "^2.6.3",
     "d3": "^5.8.0",
@@ -49,6 +50,7 @@
     "@angular/compiler-cli": "^6.1.10",
     "@angular/language-service": "^6.1.10",
     "@types/d3": "^5.7.0",
+    "@types/google.analytics": "0.0.39",
     "@types/jasmine": "^2.8.16",
     "@types/jasminewd2": "^2.0.6",
     "@types/node": "~8.9.4",
