--- a/.gitignore
+++ b/.gitignore
@@ -25,9 +25,10 @@ sample-viewer-api/src/static/data/*.xls
 sample-viewer-api/src/static/data/*.csv
 sample-viewer-api/src/static/data/*.json
 sample-viewer-api/src/static/data/*.fasta
-sample-viewer-api/src/static/data/uploads/*.xlsx
-sample-viewer-api/src/static/data/uploads/*.xls
-sample-viewer-api/src/static/data/uploads/*.csv
-sample-viewer-api/src/static/data/uploads/*.json
+sample-viewer-api/src/static/data/**/*.fasta
+sample-viewer-api/src/static/data/**/*.xlsx
+sample-viewer-api/src/static/data/**/*.xls
+sample-viewer-api/src/static/data/**/*.csv
+sample-viewer-api/src/static/data/**/*.json
 notes/*.md
 notes/wordpress_css_link_underline.css
