--- a/.gitignore
+++ b/.gitignore
@@ -29,6 +29,7 @@ sample-viewer-api/src/static/data/**/*.fasta
 sample-viewer-api/src/static/data/**/*.xlsx
 sample-viewer-api/src/static/data/**/*.xls
 sample-viewer-api/src/static/data/**/*.csv
+sample-viewer-api/src/static/data/**/*.tsv
 sample-viewer-api/src/static/data/**/*.json
 notes/*.md
 notes/wordpress_css_link_underline.css
