--- a/sample-viewer-api/src/static/schemas/Classes/cvisb-context.yaml
+++ b/sample-viewer-api/src/static/schemas/Classes/cvisb-context.yaml
@@ -9,6 +9,6 @@
 
   # bsc:                     "http://bioschemas.org/"
   # bts:                     "http://schema.biothings.io/"
-  cvisb:                     "http://schema.cvisb.org/"
+  cvisb:                     "https://data.cvisb.org/jsonschema/"
 "version": 0.1
-"@id":                       "http://schema.cvisb.org/{{version}}"
+"@id":                       "https://data.cvisb.org/jsonschema/{{version}}"
