--- a/.gitignore
+++ b/.gitignore
@@ -35,3 +35,4 @@ notes/*.md
 notes/wordpress_css_link_underline.css
 sample-viewer-api/src/static/data/clean_samples/exploratory_scripts/2019-05-06_prioritize4briney.py
 sample-viewer-api/src/static/data/clean_patients/exploratory_scripts/2019-05-14_acuteEbola_dylanExploration.R
+notes/2019-05-14_experiment-dataset-metadata.json
