--- a/sample-viewer/package.json
+++ b/sample-viewer/package.json
@@ -35,6 +35,7 @@
     "@nguniversal/express-engine": "^7.1.0",
     "@nguniversal/module-map-ngfactory-loader": "^7.1.0",
     "@ngx-lite/json-ld": "^0.5.2",
+    "angulartics2": "^7.5.2",
     "autotrack": "^2.4.1",
     "cookie-parser": "^1.4.3",
     "core-js": "^2.6.3",
@@ -45,7 +46,7 @@
     "zone.js": "^0.8.29"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^0.8.9",
+    "@angular-devkit/build-angular": "^0.13.9",
     "@angular/cli": "^6.2.9",
     "@angular/compiler-cli": "^6.1.10",
     "@angular/language-service": "^6.1.10",
