test: fix universal not building prod initially

--- a/sample-viewer/package.json
+++ b/sample-viewer/package.json
@@ -12,7 +12,7 @@
     "build:ssr": "npm run build:client-and-server-bundles && npm run webpack:server",
     "serve:ssr": "node dist/server",
     "build:dev-bundles": "ng build --preserve-symlinks && ng run sample-viewer:server",
-    "build:client-and-server-bundles": "ng build --prod && ng run sample-viewer:server",
+    "build:client-and-server-bundles": "ng build --prod && ng run sample-viewer:server:production",
     "webpack:server": "webpack --config webpack.server.config.js --progress --colors"
   },
   "private": true,
