--- a/.gitignore
+++ b/.gitignore
@@ -33,6 +33,7 @@ sample-viewer-api/src/static/data/**/*.xls
 sample-viewer-api/src/static/data/**/*.csv
 sample-viewer-api/src/static/data/**/*.tsv
 sample-viewer-api/src/static/data/**/*.json
+sample-viewer-api/src/static/data/**/*.tre
 notes/*.md
 notes/wordpress_css_link_underline.css
 sample-viewer-api/src/static/data/clean_samples/exploratory_scripts/2019-05-06_prioritize4briney.py
