update circle packing tooltips

--- a/sample-viewer/package.json
+++ b/sample-viewer/package.json
@@ -35,8 +35,10 @@
     "@nguniversal/express-engine": "^7.1.0",
     "@nguniversal/module-map-ngfactory-loader": "^7.1.0",
     "@ngx-lite/json-ld": "^0.5.2",
+    "@types/chroma-js": "^1.4.1",
     "angulartics2": "^7.5.2",
     "autotrack": "^2.4.1",
+    "chroma-js": "^2.0.4",
     "cookie-parser": "^1.4.3",
     "core-js": "^2.6.3",
     "d3": "^5.8.0",
