Create fake PUT requests for tests

--- a/sample-viewer-api/src/static/schemas/static/Dataset-static.yaml
+++ b/sample-viewer-api/src/static/schemas/static/Dataset-static.yaml
@@ -18,7 +18,7 @@
       contactType:                      "technical support"
       email:                            "info@cvisb.org"
       url:                              "https://cvisb.org/"
-  funder:
+  funding:
     "@type":                            "Organization"
     name:                               "National Institute of Allergy & Infectious Diseases"
     alternateName:                      "NIAID"
