--- a/sample-viewer/src/tsconfig.server.json
+++ b/sample-viewer/src/tsconfig.server.json
@@ -12,5 +12,10 @@
   ],
   "angularCompilerOptions": {
     "entryModule": "app/app.server.module#AppServerModule"
-  }
+  },
+  "lib": [
+    "es2018",
+    "dom",
+    "esnext.array"
+  ]
 }
