--- a/sample-viewer/src/tsconfig.server.json
+++ b/sample-viewer/src/tsconfig.server.json
@@ -16,6 +16,11 @@
     "**/*.spec.ts"
   ],
   "angularCompilerOptions": {
-    "entryModule": "app/app.server.module#AppServerModule"
+    "entryModule": "app/app.server.module#AppServerModule",
+    "lib": [
+      "es2018",
+      "dom",
+      "esnext.array"
+    ]
   }
 }
