--- a/sample-viewer/src/tsconfig.server.json
+++ b/sample-viewer/src/tsconfig.server.json
@@ -16,11 +16,6 @@
     "**/*.spec.ts"
   ],
   "angularCompilerOptions": {
-    "entryModule": "app/app.server.module#AppServerModule",
-    "lib": [
-      "es2018",
-      "dom",
-      "esnext.array"
-    ]
+    "entryModule": "app/app.server.module#AppServerModule"
   }
 }
