--- a/sample-viewer/src/tsconfig.server.json
+++ b/sample-viewer/src/tsconfig.server.json
@@ -3,8 +3,9 @@
   "compilerOptions": {
     "outDir": "../out-tsc/app",
     "baseUrl": "./",
-    "module": "commonjs",
+    "module": "es2015",
     "types": [],
+    "target": "es2018",
     "lib": [
       "es2018",
       "dom",
