--- a/sample-viewer/src/tsconfig.server.json
+++ b/sample-viewer/src/tsconfig.server.json
@@ -2,10 +2,16 @@
   "extends": "../tsconfig.json",
   "compilerOptions": {
     "outDir": "../out-tsc/app",
-    "baseUrl": "./",
+    "sourceMap": true,
+    "declaration": false,
     "module": "es2015",
-    "types": [],
-    "target": "es2018",
+    "moduleResolution": "node",
+    "emitDecoratorMetadata": true,
+    "experimentalDecorators": true,
+    "target": "es5",
+    "typeRoots": [
+      "node_modules/@types"
+    ],
     "lib": [
       "es2018",
       "dom",
