remove large KGH image

--- a/.gitignore
+++ b/.gitignore
@@ -41,3 +41,4 @@ sample-viewer-api/src/static/data/clean_patients/exploratory_scripts/2019-05-14_
 notes/2019-05-14_experiment-dataset-metadata.json
 sample-viewer-api/src/static/schemas/cvisb_variables_2019-05-22.xlsx
 sample-viewer-api/src/static/privacy/*
+sample-viewer/src/assets/img/KGH_fullsize.jpeg
