--- a/sample-viewer/package.json
+++ b/sample-viewer/package.json
@@ -30,19 +30,23 @@
     "@angular/platform-browser-dynamic": "^6.1.10",
     "@angular/platform-server": "^7.2.15",
     "@angular/router": "^6.1.10",
+    "@asymmetrik/ngx-leaflet": "^6.0.1",
     "@ng-select/ng-select": "^2.20.5",
-    "@nguniversal/common": "^7.1.0",
-    "@nguniversal/express-engine": "^7.1.0",
-    "@nguniversal/module-map-ngfactory-loader": "^7.1.0",
+    "@nguniversal/common": "^7.1.1",
+    "@nguniversal/express-engine": "^7.1.1",
+    "@nguniversal/module-map-ngfactory-loader": "^7.1.1",
     "@ngx-lite/json-ld": "^0.5.2",
     "@types/chroma-js": "^1.4.2",
+    "@types/lodash": "^4.14.141",
     "angulartics2": "^7.5.2",
     "array.prototype.flatmap": "^1.2.1",
     "autotrack": "^2.4.1",
     "chroma-js": "^2.0.6",
-    "cookie-parser": "^1.4.3",
+    "cookie-parser": "^1.4.4",
     "core-js": "^2.6.9",
     "d3": "^5.12.0",
+    "d3-geo-projection": "^2.7.0",
+    "leaflet": "^1.5.1",
     "rxjs": "~6.2.0",
     "ts-loader": "^5.4.5",
     "ui-select": "^0.19.8",
@@ -57,6 +61,7 @@
     "@types/google.analytics": "0.0.39",
     "@types/jasmine": "^2.8.16",
     "@types/jasminewd2": "^2.0.6",
+    "@types/leaflet": "^1.5.2",
     "@types/node": "~8.9.4",
     "codelyzer": "~4.3.0",
     "jasmine-core": "~2.99.1",
