--- a/sample-viewer/angular.json
+++ b/sample-viewer/angular.json
@@ -45,10 +45,17 @@
               "src/assets/sitemap.xml",
               "src/assets/robots.txt",
               "src/assets/schema",
-              "src/assets/data"
+              "src/assets/data",
+              "src/assets/geo",
+              {
+                "glob": "**/*",
+                "input": "./node_modules/leaflet/dist/images",
+                "output": "leaflet/"
+              }
             ],
             "styles": [
-              "src/styles.scss"
+              "src/styles.scss",
+              "./node_modules/leaflet/dist/leaflet.css"
             ],
             "stylePreprocessorOptions": {
               "includePaths": ["src", "src/sass"]
@@ -98,7 +105,8 @@
             "tsConfig": "src/tsconfig.spec.json",
             "karmaConfig": "src/karma.conf.js",
             "styles": [
-              "src/styles.scss"
+              "src/styles.scss",
+              "./node_modules/leaflet/dist/leaflet.css"
             ],
             "scripts": [],
             "assets": [
@@ -107,7 +115,13 @@
               "src/assets/sitemap.xml",
               "src/assets/robots.txt",
               "src/assets/schema",
-              "src/assets/data"
+              "src/assets/data",
+              "src/assets/geo",
+              {
+                "glob": "**/*",
+                "input": "./node_modules/leaflet/dist/images",
+                "output": "leaflet/"
+              }
             ]
           }
         },
