--- a/sample-viewer/package.json
+++ b/sample-viewer/package.json
@@ -17,53 +17,53 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^6.1.10",
-    "@angular/cdk": "^6.4.7",
-    "@angular/common": "^6.1.10",
-    "@angular/compiler": "^6.1.10",
-    "@angular/core": "^6.1.10",
+    "@angular/animations": "^8.2.11",
+    "@angular/cdk": "^8.2.3",
+    "@angular/common": "^8.2.11",
+    "@angular/compiler": "^8.2.11",
+    "@angular/core": "^8.2.11",
     "@angular/flex-layout": "github:angular/flex-layout-builds",
-    "@angular/forms": "^6.1.10",
-    "@angular/http": "^6.1.10",
-    "@angular/material": "^6.4.7",
-    "@angular/platform-browser": "^6.1.10",
-    "@angular/platform-browser-dynamic": "^6.1.10",
-    "@angular/platform-server": "^7.2.15",
-    "@angular/router": "^6.1.10",
+    "@angular/forms": "^8.2.11",
+    "@angular/material": "^8.2.3",
+    "@angular/platform-browser": "^8.2.11",
+    "@angular/platform-browser-dynamic": "^8.2.11",
+    "@angular/platform-server": "^8.2.11",
+    "@angular/router": "^8.2.11",
     "@asymmetrik/ngx-leaflet": "^6.0.1",
     "@ng-select/ng-select": "^2.20.5",
     "@nguniversal/common": "^7.1.1",
     "@nguniversal/express-engine": "^7.1.1",
     "@nguniversal/module-map-ngfactory-loader": "^7.1.1",
     "@ngx-lite/json-ld": "^0.5.2",
-    "@types/chroma-js": "^1.4.2",
-    "@types/lodash": "^4.14.141",
+    "@types/chroma-js": "^1.4.3",
+    "@types/lodash": "^4.14.144",
     "angulartics2": "^7.5.2",
-    "array.prototype.flatmap": "^1.2.1",
+    "array.prototype.flatmap": "^1.2.2",
     "autotrack": "^2.4.1",
     "chroma-js": "^2.0.6",
     "cookie-parser": "^1.4.4",
-    "core-js": "^2.6.9",
+    "core-js": "^2.6.10",
     "d3": "^5.12.0",
     "d3-geo-projection": "^2.7.0",
     "leaflet": "^1.5.1",
-    "rxjs": "~6.2.0",
+    "rxjs": "~6.5.3",
     "ts-loader": "^5.4.5",
+    "tslib": "^1.10.0",
     "ui-select": "^0.19.8",
-    "zone.js": "^0.8.29"
+    "zone.js": "~0.9.1"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^0.13.9",
-    "@angular/cli": "^6.2.9",
-    "@angular/compiler-cli": "^6.1.10",
-    "@angular/language-service": "^6.1.10",
+    "@angular/cli": "^8.3.13",
+    "@angular/compiler-cli": "^8.2.11",
+    "@angular/language-service": "^8.2.11",
     "@types/d3": "^5.7.2",
     "@types/google.analytics": "0.0.39",
     "@types/jasmine": "^2.8.16",
-    "@types/jasminewd2": "^2.0.6",
-    "@types/leaflet": "^1.5.2",
+    "@types/jasminewd2": "^2.0.8",
+    "@types/leaflet": "^1.5.5",
     "@types/node": "~8.9.4",
-    "codelyzer": "~4.3.0",
+    "codelyzer": "^5.0.1",
     "jasmine-core": "~2.99.1",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "~3.0.0",
@@ -74,7 +74,7 @@
     "protractor": "^5.4.2",
     "ts-node": "~7.0.0",
     "tslint": "~5.11.0",
-    "typescript": "^2.9.2",
+    "typescript": "3.4.5",
     "webpack-cli": "^3.3.8"
   }
 }
