--- a/sample-viewer/package.json
+++ b/sample-viewer/package.json
@@ -17,6 +17,7 @@
   },
   "private": true,
   "dependencies": {
+    "@angular-devkit/build-angular": "^0.803.13",
     "@angular/animations": "^8.2.11",
     "@angular/cdk": "^8.2.3",
     "@angular/common": "^8.2.11",
@@ -45,6 +46,7 @@
     "core-js": "^2.6.10",
     "d3": "^5.12.0",
     "d3-geo-projection": "^2.7.0",
+    "hammerjs": "^2.0.8",
     "leaflet": "^1.5.1",
     "rxjs": "~6.5.3",
     "ts-loader": "^5.4.5",
@@ -53,7 +55,6 @@
     "zone.js": "~0.9.1"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^0.13.9",
     "@angular/cli": "^8.3.13",
     "@angular/compiler-cli": "^8.2.11",
     "@angular/language-service": "^8.2.11",
