sync tsconfig.server with tsconfig after ts update

--- a/sample-viewer/src/tsconfig.server.json
+++ b/sample-viewer/src/tsconfig.server.json
@@ -2,6 +2,8 @@
   "extends": "../tsconfig.json",
   "compilerOptions": {
     "baseUrl": "./",
+    "downlevelIteration": true,
+    "importHelpers": true,
     "outDir": "../out-tsc/app",
     "sourceMap": true,
     "declaration": false,
