--- a/sample-viewer/package.json
+++ b/sample-viewer/package.json
@@ -17,21 +17,21 @@
   },
   "private": true,
   "dependencies": {
-    "@angular-devkit/build-angular": "^0.803.14",
-    "@angular/animations": "^8.2.12",
+    "@angular-devkit/build-angular": "~0.803.19",
+    "@angular/animations": "^8.2.14",
     "@angular/cdk": "^8.2.3",
-    "@angular/common": "^8.2.12",
-    "@angular/compiler": "^8.2.12",
-    "@angular/core": "^8.2.12",
-    "@angular/flex-layout": "github:angular/flex-layout-builds",
-    "@angular/forms": "^8.2.12",
+    "@angular/common": "^8.2.14",
+    "@angular/compiler": "^8.2.14",
+    "@angular/core": "^8.2.14",
+    "@angular/flex-layout": "8.0.0-beta.27",
+    "@angular/forms": "^8.2.14",
     "@angular/material": "^8.2.3",
-    "@angular/platform-browser": "^8.2.12",
-    "@angular/platform-browser-dynamic": "^8.2.12",
-    "@angular/platform-server": "^8.2.12",
-    "@angular/router": "^8.2.12",
+    "@angular/platform-browser": "^8.2.14",
+    "@angular/platform-browser-dynamic": "^8.2.14",
+    "@angular/platform-server": "^8.2.14",
+    "@angular/router": "^8.2.14",
     "@asymmetrik/ngx-leaflet": "^6.0.1",
-    "@ng-select/ng-select": "^3.3.0",
+    "@ng-select/ng-select": "^3.6.1",
     "@nguniversal/common": "^8.1.1",
     "@nguniversal/express-engine": "^8.1.1",
     "@nguniversal/module-map-ngfactory-loader": "^8.1.1",
@@ -41,9 +41,9 @@
     "angulartics2": "^8.1.0",
     "array.prototype.flatmap": "^1.2.2",
     "autotrack": "^2.4.1",
-    "chroma-js": "^2.0.6",
+    "chroma-js": "^2.1.0",
     "cookie-parser": "^1.4.4",
-    "core-js": "^3.3.3",
+    "core-js": "^3.4.1",
     "d3": "^5.12.0",
     "d3-geo-projection": "^2.7.0",
     "hammerjs": "^2.0.8",
@@ -52,19 +52,19 @@
     "ts-loader": "^6.2.1",
     "tslib": "^1.10.0",
     "ui-select": "^0.19.8",
-    "zone.js": "~0.10.2"
+    "zone.js": "~0.9.1"
   },
   "devDependencies": {
-    "@angular/cli": "^8.3.14",
-    "@angular/compiler-cli": "^8.2.12",
-    "@angular/language-service": "^8.2.12",
-    "@schematics/angular": "^8.3.14",
+    "@angular/cli": "^8.3.19",
+    "@angular/compiler-cli": "^8.2.14",
+    "@angular/language-service": "^8.2.14",
+    "@schematics/angular": "^8.3.19",
     "@types/d3": "^5.7.2",
     "@types/google.analytics": "0.0.40",
-    "@types/jasmine": "^3.4.4",
+    "@types/jasmine": "^3.4.6",
     "@types/jasminewd2": "^2.0.8",
     "@types/leaflet": "^1.5.5",
-    "@types/node": "~12.11.7",
+    "@types/node": "~12.12.7",
     "codelyzer": "^5.0.1",
     "jasmine-core": "~3.5.0",
     "jasmine-spec-reporter": "~4.2.1",
@@ -74,9 +74,9 @@
     "karma-jasmine": "~2.0.1",
     "karma-jasmine-html-reporter": "^1.4.2",
     "protractor": "^5.4.2",
-    "ts-node": "~8.4.1",
-    "tslint": "~5.20.0",
+    "ts-node": "~8.5.2",
+    "tslint": "~5.20.1",
     "typescript": "3.4.5",
-    "webpack-cli": "^3.3.9"
+    "webpack-cli": "^3.3.10"
   }
 }
