--- a/sample-viewer/angular.json
+++ b/sample-viewer/angular.json
@@ -46,12 +46,12 @@
               "src/assets/robots.txt",
               "src/assets/schema",
               "src/assets/data",
-              "src/assets/geo",
-              {
+              "src/assets/geo"
+              /* {
                 "glob": "**/*",
-                /* "input": "./node_modules/leaflet/dist/images",
-                "output": "leaflet/" */
-              }
+                "input": "./node_modules/leaflet/dist/images",
+                "output": "leaflet/"
+              } */
             ],
             "styles": [
               "src/styles.scss",
@@ -105,7 +105,7 @@
             "tsConfig": "src/tsconfig.spec.json",
             "karmaConfig": "src/karma.conf.js",
             "styles": [
-              "src/styles.scss",
+              "src/styles.scss"
               /* "./node_modules/leaflet/dist/leaflet.css" */
             ],
             "scripts": [],
@@ -116,12 +116,12 @@
               "src/assets/robots.txt",
               "src/assets/schema",
               "src/assets/data",
-              "src/assets/geo",
-              {
+              "src/assets/geo"
+              /* {
                 "glob": "**/*",
-                /* "input": "./node_modules/leaflet/dist/images",
-                "output": "leaflet/" */
-              }
+                "input": "./node_modules/leaflet/dist/images",
+                "output": "leaflet/"
+              } */
             ]
           }
         },
