remove outdated code

--- a/.gitignore
+++ b/.gitignore
@@ -49,3 +49,4 @@ sample-viewer/src/app/test/test.component.spec.ts
 sample-viewer/src/app/test/test.component.html
 sample-viewer/src/app/test/test.component.scss
 sample-viewer/src/app/test/test.component.ts
+antiquated_code/*
