--- a/sample-viewer/package.json
+++ b/sample-viewer/package.json
@@ -31,6 +31,9 @@
     "@angular/platform-server": "^8.2.14",
     "@angular/router": "^8.2.14",
     "@asymmetrik/ngx-leaflet": "^6.0.1",
+    "@fortawesome/angular-fontawesome": "^0.5.0",
+    "@fortawesome/fontawesome-svg-core": "^1.2.25",
+    "@fortawesome/free-solid-svg-icons": "^5.11.2",
     "@ng-select/ng-select": "^3.6.1",
     "@nguniversal/common": "^8.1.1",
     "@nguniversal/express-engine": "^8.1.1",
