remove soucemapping from SSR

--- a/sample-viewer/angular.json
+++ b/sample-viewer/angular.json
@@ -19,7 +19,8 @@
           "options": {
             "outputPath": "dist/server",
             "main": "src/main.server.ts",
-            "tsConfig": "src/tsconfig.server.json"
+            "tsConfig": "src/tsconfig.server.json",
+            "sourceMap": false
           },
           "configurations": {
             "production": {
