--- a/sample-viewer/package.json
+++ b/sample-viewer/package.json
@@ -17,7 +17,7 @@
   },
   "private": true,
   "dependencies": {
-    "@angular-devkit/build-angular": "~0.803.19",
+    "@angular-devkit/build-angular": "^0.803.23",
     "@angular/animations": "^8.2.14",
     "@angular/cdk": "^8.2.3",
     "@angular/common": "^8.2.14",
@@ -49,8 +49,8 @@
     "core-js": "^3.4.1",
     "d3": "^5.12.0",
     "d3-geo-projection": "^2.7.0",
-    "hammerjs": "^2.0.8",
     "leaflet": "^1.5.1",
+    "moment": "^2.24.0",
     "rxjs": "~6.5.3",
     "ts-loader": "^6.2.1",
     "tslib": "^1.10.0",
