update to angular 9

--- a/sample-viewer/src/tsconfig.server.json
+++ b/sample-viewer/src/tsconfig.server.json
@@ -21,11 +21,13 @@
       "esnext.array"
     ]
   },
-  "exclude": [
-    "test.ts",
-    "**/*.spec.ts"
-  ],
   "angularCompilerOptions": {
     "entryModule": "app/app.server.module#AppServerModule"
-  }
+  },
+  "files": [
+    "main.server.ts"
+  ],
+  "include": [
+    "src/**/*.d.ts"
+  ]
 }
