--- a/sample-viewer/tsconfig.json
+++ b/sample-viewer/tsconfig.json
@@ -1,6 +1,7 @@
 {
   "compileOnSave": false,
   "compilerOptions": {
+    "resolveJsonModule": true,
     "baseUrl": "./",
     "downlevelIteration": true,
     "importHelpers": true,
