--- a/sample-viewer/package.json
+++ b/sample-viewer/package.json
@@ -51,6 +51,7 @@
     "d3-geo-projection": "^2.7.0",
     "leaflet": "^1.5.1",
     "moment": "^2.24.0",
+    "npm": "^6.13.7",
     "rxjs": "~6.5.3",
     "ts-loader": "^6.2.1",
     "tslib": "^1.10.0",
