--- a/sample-viewer/package.json
+++ b/sample-viewer/package.json
@@ -17,7 +17,7 @@
   },
   "private": true,
   "dependencies": {
-    "@angular-devkit/build-angular": "^0.900.2",
+    "@angular-devkit/build-angular": "~0.900.2",
     "@angular/animations": "^9.0.1",
     "@angular/cdk": "^8.2.3",
     "@angular/common": "^9.0.1",
@@ -68,8 +68,8 @@
     "@types/jasmine": "^3.4.6",
     "@types/jasminewd2": "^2.0.8",
     "@types/leaflet": "^1.5.5",
-    "@types/node": "~12.12.7",
-    "codelyzer": "^5.0.1",
+    "@types/node": "^12.11.1",
+    "codelyzer": "^5.1.2",
     "jasmine-core": "~3.5.0",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "~4.4.1",
