Update Angular Universal to Angular 9

--- a/sample-viewer/package.json
+++ b/sample-viewer/package.json
@@ -9,11 +9,15 @@
     "lint": "ng lint",
     "e2e": "ng e2e",
     "build:dev": "npm run build:dev-bundles && npm run webpack:server",
-    "build:ssr": "npm run build:client-and-server-bundles && npm run webpack:server",
-    "serve:ssr": "node dist/server",
     "build:dev-bundles": "ng build --preserve-symlinks --stats-json && ng run sample-viewer:server",
-    "build:client-and-server-bundles": "ng build --prod --aot && ng run sample-viewer:server:production",
-    "webpack:server": "webpack --config webpack.server.config.js --progress --colors"
+    "webpack:server": "webpack --config webpack.server.config.js --progress --colors",
+    "build:ssr_bak": "npm run build:client-and-server-bundles && npm run webpack:server",
+    "serve:ssr_bak": "node dist/server",
+    "build:client-and-server-bundles_bak": "ng build --prod --aot && ng run sample-viewer:server:production",
+    "dev:ssr": "ng run sample-viewer:serve-ssr",
+    "serve:ssr": "node dist/server/main.js",
+    "build:ssr": "ng build --prod && ng run sample-viewer:server:production",
+    "prerender": "ng run sample-viewer:prerender"
   },
   "private": true,
   "dependencies": {
@@ -35,9 +39,8 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.25",
     "@fortawesome/free-solid-svg-icons": "^5.11.2",
     "@ng-select/ng-select": "^3.6.1",
-    "@nguniversal/common": "^8.1.1",
-    "@nguniversal/express-engine": "^8.1.1",
-    "@nguniversal/module-map-ngfactory-loader": "^8.1.1",
+    "@nguniversal/common": "^9.0.0",
+    "@nguniversal/express-engine": "^9.0.0",
     "@ngx-lite/json-ld": "^0.6.2",
     "@types/chroma-js": "^1.4.3",
     "@types/lodash": "^4.14.144",
@@ -49,6 +52,7 @@
     "core-js": "^3.4.1",
     "d3": "^5.12.0",
     "d3-geo-projection": "^2.7.0",
+    "express": "^4.15.2",
     "leaflet": "^1.5.1",
     "moment": "^2.24.0",
     "npm": "^6.13.7",
@@ -62,8 +66,10 @@
     "@angular/cli": "^9.0.2",
     "@angular/compiler-cli": "^9.0.1",
     "@angular/language-service": "^9.0.1",
+    "@nguniversal/builders": "^9.0.0",
     "@schematics/angular": "^8.3.19",
     "@types/d3": "^5.7.2",
+    "@types/express": "^4.17.0",
     "@types/google.analytics": "0.0.40",
     "@types/jasmine": "^3.4.6",
     "@types/jasminewd2": "^2.0.8",
