--- a/sample-viewer/angular.json
+++ b/sample-viewer/angular.json
@@ -18,7 +18,7 @@
           "builder": "@angular-devkit/build-angular:server",
           "options": {
             "outputPath": "dist/server",
-            "main": "server.ts",
+            "main": "./src/server.ts",
             "tsConfig": "src/tsconfig.server.json",
             "sourceMap": false
           },
