--- a/sample-viewer/package.json
+++ b/sample-viewer/package.json
@@ -8,7 +8,7 @@
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "build:dev": "npm run build:dev-bundles && npm run webpack:server",
+    "build:dev_bak": "npm run build:dev-bundles && npm run webpack:server",
     "build:dev-bundles": "ng build --preserve-symlinks --stats-json && ng run sample-viewer:server",
     "webpack:server": "webpack --config webpack.server.config.js --progress --colors",
     "build:ssr_bak": "npm run build:client-and-server-bundles && npm run webpack:server",
@@ -16,6 +16,7 @@
     "build:client-and-server-bundles_bak": "ng build --prod --aot && ng run sample-viewer:server:production",
     "dev:ssr": "ng run sample-viewer:serve-ssr",
     "serve:ssr": "node dist/server/main.js",
+    "build:dev": "ng build --preserve-symlinks --aot && ng run sample-viewer:server",
     "build:ssr": "ng build --prod && ng run sample-viewer:server:production",
     "prerender": "ng run sample-viewer:prerender"
   },
