--- a/sample-viewer/e2e/tsconfig.e2e.json
+++ b/sample-viewer/e2e/tsconfig.e2e.json
@@ -2,8 +2,8 @@
   "extends": "../tsconfig.json",
   "compilerOptions": {
     "outDir": "../out-tsc/app",
-    "module": "commonjs",
-    "target": "es5",
+    "module": "esnext",
+    "target": "es2015",
     "types": [
       "jasmine",
       "jasminewd2",
