--- a/sample-viewer/tsconfig.json
+++ b/sample-viewer/tsconfig.json
@@ -11,15 +11,14 @@
     "moduleResolution": "node",
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
-    "target": "es2015",
+    "target": "esnext",
     "resolveJsonModule": true,
     "typeRoots": [
       "node_modules/@types"
     ],
     "lib": [
-      "es2018",
-      "dom",
-      "esnext.array"
+      "esnext",
+      "dom"
     ]
   }
 }
