revert to es2015
needed for cross-browser compatibility (?)

--- a/sample-viewer/e2e/tsconfig.e2e.json
+++ b/sample-viewer/e2e/tsconfig.e2e.json
@@ -3,7 +3,7 @@
   "compilerOptions": {
     "outDir": "../out-tsc/app",
     "module": "esnext",
-    "target": "esnext",
+    "target": "es2015",
     "types": [
       "jasmine",
       "jasminewd2",
