--- a/sample-viewer/tsconfig.json
+++ b/sample-viewer/tsconfig.json
@@ -11,14 +11,15 @@
     "moduleResolution": "node",
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
-    "target": "esnext",
+    "target": "es2015",
     "resolveJsonModule": true,
     "typeRoots": [
       "node_modules/@types"
     ],
     "lib": [
-      "esnext",
-      "dom"
+      "es2018",
+      "dom",
+      "esnext.array"
     ]
   }
 }
