add mexico, jordan

--- a/.gitignore
+++ b/.gitignore
@@ -50,3 +50,4 @@ sample-viewer/src/app/test/test.component.html
 sample-viewer/src/app/test/test.component.scss
 sample-viewer/src/app/test/test.component.ts
 antiquated_code/*
+sample-viewer/src/assets/geo/country2icon.R
