--- a/.gitignore
+++ b/.gitignore
@@ -52,3 +52,4 @@ sample-viewer/src/app/test/test.component.ts
 antiquated_code/*
 sample-viewer/src/assets/geo/country2icon.R
 sample-viewer/src/assets/robots.txt
+sample-viewer/src/robots.txt
